--- a/get-started/quick-start/go-live.mdx
+++ b/get-started/quick-start/go-live.mdx
@@ -11,35 +11,57 @@ The go-live process on SKALE can differ slightly from other chains and varies sl
 The following is for SKALE Base chains (testnet and mainnet) which are **permissionless**.
 </Note>
 
-<Steps>
-    <Step title="Go to Testnet faucet">
+<Tabs>
+    <Tab title="Deploy on Mainnet">
+        <Steps>
+            <Step title="CREDITS Purchase">
+            To deploy contracts and execute transactions on the SKALE Base Mainnet you need CREDITs.
+            - Please check your CREDITS Balance [here](https://base.skalenodes.com/credits)
 
-    - Head to the [SKALE Base Sepolia faucet](https://base-sepolia-faucet.skale.space) to get compute CREDITs.
+              <img
+                 src="../../assets/skale-base-flows/chain_credits_initial.png"
+                 alt="CREDITS Menu"
+                 width="500"
+              />
+            - Select the button `Buy credits` above, select the payment method - `USDC` **or** `SKL` - and complete the purchase.
+            <img
+                 src="../../assets/skale-base-flows/chain_credits_purchase.png"
+                 alt="Buy CREDITS"
+                 width="400"
+              />
+            
+            - If any issues are faced please contact the [SKALE Team](https://discord.gg/skale)
 
-    - If required a bigger CREDIT allocation (ex: it's required to run some dApp specific tests) please open a ticket on [SKALE Discord](https://discord.gg/skale) and request it to the SKALE Team.
+            </Step>
+            <Step title="Deploy to Mainnet">
 
-    </Step>
-    <Step title="Deploy to Testnet">
+            - Deploy you contracts on the SKALE Base. The chain details (ex: RPC, Chain Id) can be found [here](./skale-on-base).
 
-    - Deploy you contracts on the SKALE Base Sepolia Testnet. The chain details (ex: RPC, ChainId) can be found [here](./skale-on-base).
+            - Make sure to have enough CREDITS to deploy contracts as well as perform the necessary app specific transactions.
+            </Step>
+        </Steps>
+    </Tab>
+    <Tab title="Deploy on Testnet">
+        <Steps>
+            <Step title="Go to Testnet faucet">
 
-    - The cookbook section includes examples showing how to deploy contracts using [Foundry](../../cookbook/deployment/setup-foundry) and [Hardhat](../../cookbook/deployment/setup-hardhat).
+            - Head to the [SKALE Base Sepolia faucet](https://base-sepolia-faucet.skale.space) to get compute CREDITS.
 
-    - Check Solidity smart contract versions and EVM compiler. SKALE currently supports Solidity versions up to 0.8.24 and EVM Compiler versions up to Shanghai.
-    </Step>
-    <Step title="Get Mainnet CREDIT">
+            - If required a bigger CREDITS allocation (ex: it's required to run some dApp specific tests) please open a ticket on [SKALE Discord](https://discord.gg/skale) and request it to the SKALE Team.
 
-    - To deploy contracts and execute transactions on the SKALE Base Mainnet, acquire compute CREDITs [here](https://base.skalenodes.com/credits). 
+            </Step>
+            <Step title="Deploy to Testnet">
 
-    - If any issues are faced please contact the [SKALE Team](https://discord.gg/skale)
-    </Step>
-    <Step title="Deploy to Mainnet">
+            - Deploy you contracts on the SKALE Base Sepolia Testnet. The chain details (ex: RPC, ChainId) can be found [here](./skale-on-base).
 
-    - Deploy you contracts on the SKALE Base. The chain details (ex: RPC, Chain Id) can be found [here](./skale-on-base).
+            - The cookbook section includes examples showing how to deploy contracts using [Foundry](../../cookbook/deployment/setup-foundry) and [Hardhat](../../cookbook/deployment/setup-hardhat).
 
-    - Make sure to have enough CREDITs to deploy contracts as well as perform the necessary app specific transactions.
-    </Step>
-</Steps>
+            - Check Solidity smart contract versions and EVM compiler. SKALE currently supports Solidity versions up to 0.8.24 and EVM Compiler versions up to Shanghai.
+            </Step>
+        </Steps>
+    </Tab>
+</Tabs>
+
 
 ## Deploying to SKALE Ethereum
 
