--- a/cookbook/facilitators/using-x402x.mdx
+++ b/cookbook/facilitators/using-x402x.mdx
@@ -18,9 +18,6 @@ x402x is an advanced facilitator service that extends the base x402 protocol wit
 Create a `.env` file with x402x configuration:
 
 ```bash
-# x402x Facilitator URL
-FACILITATOR_URL=https://facilitator.x402x.dev/
-
 # Your receiving address
 RECEIVING_ADDRESS=0xyour_address_to_receive_payment
 
@@ -73,7 +70,7 @@ app.use(
   }),
 );
 
-  const facilitatorUrl = process.env.FACILITATOR_URL!;
+  const facilitatorUrl = "https://facilitator.x402x.dev";
   const receivingAddress = process.env.RECEIVING_ADDRESS as `0x${string}`;
   const networkChainId = process.env.NETWORK_CHAIN_ID || "324705682";
   const network = `eip155:${networkChainId}`;
@@ -193,7 +190,7 @@ main();
 
 ### Connection Issues
 
-If you cannot connect to PayAI:
+If you cannot connect to x402x:
 
 1. Verify the facilitator URL is correct
 2. Check network connectivity
@@ -236,5 +233,5 @@ Common causes and solutions:
 ---
 
 <Note>
-x402x is a third-party enterprise service. Contact the x402x team for access, custom pricing, and enterprise support. The URLs in this guide are placeholders and will be updated when the service is publicly available.
+x402x is a third-party enterprise service. Contact the x402x team for access, custom pricing, and enterprise support.
 </Note>
