Kobaru changes: simplification and bugs fix

--- a/cookbook/facilitators/using-payai.mdx
+++ b/cookbook/facilitators/using-payai.mdx
@@ -197,8 +197,8 @@ Common causes and solutions:
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="Using x402x" icon="layer-group" href="/cookbook/x402/using-x402x">
-    Alternative facilitator with advanced features
+  <Card title="SKALE Supported Facilitators" icon="dollar-sign" href="/get-started/agentic-builders/facilitators">
+    Alternative hosted facilitator service
   </Card>
   <Card title="Run Your Own" icon="server" href="/cookbook/x402/facilitator">
     Deploy your own facilitator infrastructure
@@ -219,5 +219,5 @@ Common causes and solutions:
 ---
 
 <Note>
-PayAI is a third-party service. Contact the PayAI team for access, pricing, and support information. The URLs in this guide are placeholders and will be updated when the service is publicly available.
+This entity -- PayAI -- is deployed and activley supporting SKALE. These are 3rd party services that may have their own terms and conditions and privacy polices. Use these services at your own risk. AI and agents is a highly experimental space; the 3rd party software solutions may have bugs or be unaudited. You and your agents and your customers use all 3rd party services chosen at your own risk and per their terms.
 </Note>
