--- a/cookbook/facilitators/using-x402x.mdx
+++ b/cookbook/facilitators/using-x402x.mdx
@@ -19,7 +19,7 @@ Create a `.env` file with x402x configuration:
 
 ```bash
 # x402x Facilitator URL
-FACILITATOR_URL=https://facilitator.x402x.dev/
+FACILITATOR_URL=https://facilitator.x402x.dev
 
 # Facilitator router address
 RECEIVING_ADDRESS=0x1Ae0E196dC18355aF3a19985faf67354213F833D
@@ -178,7 +178,7 @@ Common causes and solutions:
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="Using PayAI" icon="dollar-sign" href="/cookbook/x402/using-payai">
+  <Card title="SKALE Supported Facilitators" icon="dollar-sign" href="/get-started/agentic-builders/facilitators">
     Alternative hosted facilitator service
   </Card>
   <Card title="Run Your Own" icon="server" href="/cookbook/x402/facilitator">
@@ -200,5 +200,5 @@ Common causes and solutions:
 ---
 
 <Note>
-x402x is a third-party enterprise service. Contact the x402x team for access, custom pricing, and enterprise support. The URLs in this guide are placeholders and will be updated when the service is publicly available.
+This entity -- x402x -- is deployed and activley supporting SKALE. These are 3rd party services that may have their own terms and conditions and privacy polices. Use these services at your own risk. AI and agents is a highly experimental space; the 3rd party software solutions may have bugs or be unaudited. You and your agents and your customers use all 3rd party services chosen at your own risk and per their terms.
 </Note>
