--- a/cookbook/facilitators/using-payai.mdx
+++ b/cookbook/facilitators/using-payai.mdx
@@ -216,4 +216,5 @@ Common causes and solutions:
 ---
 
 <Note>
-PayAI is a third-party service. Contact the PayAI team for access, pricing, and support information.
+This entity -- PayAI -- is deployed and activley supporting SKALE. These are 3rd party services that may have their own terms and conditions and privacy polices. Use these services at your own risk. AI and agents is a highly experimental space; the 3rd party software solutions may have bugs or be unaudited. You and your agents and your customers use all 3rd party services chosen at your own risk and per their terms.
+</Note>
