--- a/cookbook/facilitators/using-x402x.mdx
+++ b/cookbook/facilitators/using-x402x.mdx
@@ -197,5 +197,5 @@ Common causes and solutions:
 ---
 
 <Note>
-x402x is a third-party enterprise service. Contact the x402x team for access, custom pricing, and enterprise support.
+This entity -- x402x -- is deployed and activley supporting SKALE. These are 3rd party services that may have their own terms and conditions and privacy polices. Use these services at your own risk. AI and agents is a highly experimental space; the 3rd party software solutions may have bugs or be unaudited. You and your agents and your customers use all 3rd party services chosen at your own risk and per their terms.
 </Note>
