chain selector helper

--- a/get-started/hackathon/info.mdx
+++ b/get-started/hackathon/info.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Info"
+title: "Information"
 description: "SKALE Network Hackathon Guide - Agentic Commerce"
 ---
 
@@ -64,7 +64,16 @@ Compare the features available on each chain:
 | **Multi-transaction Mode** | ✅ | ✅  |
 | **x402 Facilitators** | ✅ | ❌ |
 
----
+### How to select?
+
+**Are you building with Encrypted Transactions?** 
+- Go with [BITE V2 Sandbox](#bite-v2-sandbox)
+
+**Are you building with x402 on SKALE?** 
+- Go with [SKALE Base Sepolia Testnet](#skale-base-sepolia-testnet)
+
+**Do you need both?**
+- Contact the SKALE Team
 
 ### SKALE Base Sepolia Testnet
 
@@ -104,7 +113,6 @@ Compare the features available on each chain:
 - This testnet chain is 100% permissionless
 - CREATE2Factory, SingletonFactory, Multicall3, and Permit2 are deployed to their canonical addresses
 
----
 
 ### BITE V2 Sandbox
 
@@ -135,6 +143,14 @@ Common testnet tokens can be deployed or bridged as needed. For token creation, 
 ---
 
 ## Faucets
+
+For SKALE Base Sepolia get the tokens bellow:
+
+<CardGroup cols={2}>
+  <Card title="Get Tokens" icon="droplet" href="https://base-sepolia-faucet.skale.space/">
+    Get your SKALE Base Sepolia tokens here
+  </Card>
+</CardGroup>
 
 ---
 ## Quick Concepts and Demos
