--- a/get-started/hackathon/info.mdx
+++ b/get-started/hackathon/info.mdx
@@ -25,15 +25,15 @@ This hackathon is a space to explore agent-to-agent commerce: agents paying each
 | Features | Native Bridge, x402 Facilitators, Encrypted Transactions (BITE Phase 1) |
 | Tokens & Contracts | [View reference](./token-reference) |
 
-### BITE V2 Sandbox
+### BITE V2 Sandbox 2
 
 **Use this if:** You're building with encrypted transactions (BITE V2)
 
 | Name | Value |
 |------|-------|
-| RPC | `https://base-sepolia-testnet.skalenodes.com/v1/bite-v2-sandbox` |
-| Explorer | [Blockscout](https://base-sepolia-testnet-explorer.skalenodes.com:10012) |
-| Chain ID | `2090472038` (Hex: `0x7CA8E676`) |
+| RPC | `https://base-sepolia-testnet.skalenodes.com/v1/bite-v2-sandbox-2` |
+| Explorer | [Blockscout](https://base-sepolia-testnet-explorer.skalenodes.com:10032) |
+| Chain ID | `103698795` (Hex: `0x62e516b`) |
 | Features | Encrypted Transactions (BITE Phase 1 & 2) |
 
 <Note>
