--- a/get-started/hackathon/info.mdx
+++ b/get-started/hackathon/info.mdx
@@ -20,6 +20,7 @@ This hackathon is a space to explore agent-to-agent commerce: agents paying each
 | Chain ID | `103698795` (Hex: `0x62e516b`) |
 | Tokens & Contracts | USDC: [0xc4083B1E81ceb461Ccef3FDa8A9F24F0d764B6D8](https://base-sepolia-testnet-explorer.skalenodes.com:10032/address/0xc4083B1E81ceb461Ccef3FDa8A9F24F0d764B6D8) |
 | Features | **x402** Facilitator, Encrypted Transactions (**BITE Phase 1 & 2**) |
+| BITE V2| [Documentation](/developers/bite-protocol/typescript-sdk#bite-v2)|
 | Facilitator | Kobaru: https://gateway.kobaru.io |
 
 <Note>
