bitev2 cookbook rps

--- a/cookbook/privacy/sending-encrypted-transactions-with-bite.mdx
+++ b/cookbook/privacy/sending-encrypted-transactions-with-bite.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Send Encrypted Transactions with BITE"
+title: "BITE V1 - Simple Encrypted Transaction"
 description: "Complete step-by-step guide to implementing private blockchain transactions using BITE threshold encryption"
 ---
 
