--- a/get-started/hackathon/info.mdx
+++ b/get-started/hackathon/info.mdx
@@ -21,6 +21,7 @@ This hackathon is a space to explore agent-to-agent commerce: agents paying each
 | Tokens & Contracts | USDC: [0xc4083B1E81ceb461Ccef3FDa8A9F24F0d764B6D8](https://base-sepolia-testnet-explorer.skalenodes.com:10032/address/0xc4083B1E81ceb461Ccef3FDa8A9F24F0d764B6D8) |
 | Features | **x402** Facilitator, Encrypted Transactions (**BITE Phase 1 & 2**) |
 | BITE V2| [Documentation](/developers/bite-protocol/typescript-sdk#bite-v2)|
+| BITE Demo| [Cookbook](/cookbook/privacy/bitev2-rps#rock-paper-scissors-with-bite-v2)|
 | Facilitator | Kobaru: https://gateway.kobaru.io |
 
 <Note>
