--- a/get-started/hackathon/info.mdx
+++ b/get-started/hackathon/info.mdx
@@ -15,7 +15,7 @@ This hackathon is a space to explore agent-to-agent commerce: agents paying each
 
 | Name | Value |
 |------|-------|
-| RPC | `https://base-sepolia-testnet.skalenodes.com/v1/bite-v2-sandbox-2` |
+| RPC | `https://base-sepolia-testnet.skalenodes.com/v1/bite-v2-sandbox` |
 | Explorer | [Blockscout](https://base-sepolia-testnet-explorer.skalenodes.com:10032) |
 | Chain ID | `103698795` (Hex: `0x62e516b`) |
 | Tokens & Contracts | USDC: [0xc4083B1E81ceb461Ccef3FDa8A9F24F0d764B6D8](https://base-sepolia-testnet-explorer.skalenodes.com:10032/address/0xc4083B1E81ceb461Ccef3FDa8A9F24F0d764B6D8) |
@@ -23,8 +23,10 @@ This hackathon is a space to explore agent-to-agent commerce: agents paying each
 | BITE V2| [Documentation](/developers/bite-protocol/typescript-sdk#bite-v2)|
 | Facilitator | Kobaru: https://gateway.kobaru.io |
 
+*Need gas or USDC* - join the Telegram channel found in Dora Hacks and tag @TheGreatAxios
+
 <Note>
-  You can also built on **SKALE Base Sepolia Testnet**. For chain details go [here](/get-started/quick-start/skale-on-base#skale-base-testnet).
+You can also built on **SKALE Base Sepolia Testnet** if you are looking for access to Base Sepolia or more facilitators. For chain details go [here](/get-started/quick-start/skale-on-base#skale-base-testnet).
 </Note>
 
 ---
