--- a/developers/bite-protocol/encrypted-transactions.mdx
+++ b/developers/bite-protocol/encrypted-transactions.mdx
@@ -50,3 +50,10 @@ async function sendEncryptedERC20Transfer(tokenAddress, to, amount) {
     return txResponse.hash;
 }
 ```
+
+## Resources
+
+- **Repository**: [https://github.com/skalenetwork/bite-ts](https://github.com/skalenetwork/bite-ts)
+- **How BITE Works**: [How BITE Works](/developers/bite-protocol/how-bite-works)
+- **MEV Protection**: [MEV Deep Dive](/concepts/bite-protocol/mev-deep-dive)
+- **Tutorial**: [Sending Encrypted Transactions with BITE](/cookbook/privacy/sending-encrypted-transactions-with-bite)
